mission section completed

--- a/index.html
+++ b/index.html
@@ -108,6 +108,82 @@
         </section>
         <!--End Mission-->
 
+        <!--Collection-->
+        <section class="bg-secondary py-4">
+            <div class="container-fluid">
+                <div class="row text-white text-center">
+                    <div class="col m-4">
+                        <h1 class="display-4 mb-4">Collection</h1>
+                        <div class="underline mb-4"></div>
+                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, eaque iure odit qui voluptas voluptatem!</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-sm-6 my-5">
+                        <div class="card border-0 card-shadow">
+                            <img src="images/nature.jpeg" class="card-img">
+                            <div class="card-img-overlay">
+                                <h5 class="text-white text-uppercase font-weight-bold p-2 heading">
+                                    Nature Photography
+                                </h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 my-5">
+                        <div class="card border-0 card-shadow">
+                            <img src="images/wedding.jpeg" class="card-img">
+                            <div class="card-img-overlay">
+                                <h5 class="text-white text-uppercase font-weight-bold p-2 heading">
+                                    Wedding Photography
+                                </h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 my-5">
+                        <div class="card border-0 card-shadow">
+                            <img src="images/party.jpeg" class="card-img">
+                            <div class="card-img-overlay">
+                                <h5 class="text-white text-uppercase font-weight-bold p-2 heading">
+                                    Party Photography
+                                </h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 my-5">
+                        <div class="card border-0 card-shadow">
+                            <img src="images/business.jpeg" class="card-img">
+                            <div class="card-img-overlay">
+                                <h5 class="text-white text-uppercase font-weight-bold p-2 heading">
+                                    Business Photography
+                                </h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 my-5">
+                        <div class="card border-0 card-shadow">
+                            <img src="images/fashion.jpeg" class="card-img">
+                            <div class="card-img-overlay">
+                                <h5 class="text-white text-uppercase font-weight-bold p-2 heading">
+                                    Fashion Photography
+                                </h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 my-5">
+                        <div class="card border-0 card-shadow">
+                            <img src="images/family.jpeg" class="card-img">
+                            <div class="card-img-overlay">
+                                <h5 class="text-white text-uppercase font-weight-bold p-2 heading">
+                                    Family Photography
+                                </h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--End Collection-->
+
 
         <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
