collection section completed

--- a/index.html
+++ b/index.html
@@ -184,6 +184,20 @@
         </section>
         <!--End Collection-->
 
+        <!--Gallery-->
+        <section class="bg-dark">
+            <div class="container-fluid">
+                <div class="row text-white text-center">
+                    <div class="col m-4">
+                        <h1 class="display-4 mb-4">Gallery</h1>
+                        <div class="underline mb-4"></div>
+                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, eaque iure odit qui voluptas voluptatem!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--End Gallery-->
+
 
         <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
