customers/testimonials section completed

--- a/index.html
+++ b/index.html
@@ -264,6 +264,124 @@
         </section>
         <!--End Gallery-->
 
+        <!--customers-->
+        <section class="p-5 customers">
+            <div class="container-fluid">
+                <div class="row text-muted text-center">
+                    <div class="col m-4">
+                        <h1 class="display-4 mb-4">Customers</h1>
+                        <div class="underline-dark mb-4"></div>
+                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, eaque iure odit qui voluptas voluptatem!</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6 mx-auto">
+                        <div class="carousel slide" data-ride="carousel" id="customer-carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#customer-carousel" data-slide-to="0" class="active"></li>
+                                <li data-target="#customer-carousel" data-slide-to="1"></li>
+                                <li data-target="#customer-carousel" data-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active text-center">
+                                    <img src="images/customer1.jpeg" class="img-fluid rounded-circle m-5" width="150">
+                                    <blockquote class="blockquote text-white">
+                                        <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, placeat.</p>
+                                    </blockquote>
+                                    <h5 class="text-light text-uppercase font-weight-bold mb-3">Adebola</h5>
+                                    <ul class="list-inline mb-5">
+                                        <li class="list-inline-item">
+                                            <i class="fas fa-star text-warning"></i>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <i class="fas fa-star text-warning"></i>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <i class="fas fa-star text-warning"></i>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <i class="fas fa-star text-warning"></i>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="carousel-item text-center">
+                                    <img src="images/customer2.jpeg" class="img-fluid rounded-circle m-5" width="150">
+                                    <blockquote class="blockquote text-white">
+                                        <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, placeat.</p>
+                                    </blockquote>
+                                    <h5 class="text-light text-uppercase font-weight-bold mb-3">Adetoye</h5>
+                                    <ul class="list-inline mb-5">
+                                        <li class="list-inline-item">
+                                            <i class="fas fa-star text-warning"></i>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <i class="fas fa-star text-warning"></i>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <i class="fas fa-star text-warning"></i>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <i class="fas fa-star text-warning"></i>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="carousel-item text-center">
+                                    <img src="images/customer3.jpeg" class="img-fluid rounded-circle m-5" width="150">
+                                    <blockquote class="blockquote text-white">
+                                        <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, placeat.</p>
+                                    </blockquote>
+                                    <h5 class="text-light text-uppercase font-weight-bold mb-3">Kehinde</h5>
+                                    <ul class="list-inline mb-5">
+                                        <li class="list-inline-item">
+                                            <i class="fas fa-star text-warning"></i>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <i class="fas fa-star text-warning"></i>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <i class="fas fa-star text-warning"></i>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <i class="fas fa-star text-warning"></i>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--end of customers-->
+
+        <!--pricing-->
+        <section>
+            <div class="container-fluid">
+                <div class="row text-muted text-center">
+                    <div class="col m-4">
+                        <h1 class="display-4 mb-4">Pricing</h1>
+                        <div class="underline-dark mb-4"></div>
+                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, eaque iure odit qui voluptas voluptatem!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--end of pricing-->
+
+        <!--contact-->
+        <section>
+            <div class="container-fluid">
+                <div class="row text-muted text-center">
+                    <div class="col m-4">
+                        <h1 class="display-4 mb-4">Contact</h1>
+                        <div class="underline-dark mb-4"></div>
+                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, eaque iure odit qui voluptas voluptatem!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--end of contact-->
+
 
         <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
