footer section completed

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="navbar navbar-expand-lg fixed-top nav-menu">
                 <a href="#" class="navbar-brand text-light">
                     <span class="h3 font-weight-bold">techBola</span>
-                    <span class="text-uppercase text-warning">Studio</span>
+                    <span class="text-uppercase text-primary">Studio</span>
                 </a>
                 <button type="button" class="navbar-toggler nav-button" data-toggle="collapse" data-target="#myNavbar">
                     <div class="bg-light line1"></div>
@@ -56,7 +56,7 @@
 
             <!--Banner-->
             <div class="text-md-right text-center text-light banner">
-                <h1 class="display-4 banner-heading">Welcome to techBola <span class="display-4 text-warning">PhotoStudio</span></h1>
+                <h1 class="display-4 banner-heading">Welcome to techBola <span class="display-4 text-primary">PhotoStudio</span></h1>
                 <p class="lead banner-par">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, molestiae?</p>
             </div>
             <!--End Banner-->
@@ -448,6 +448,73 @@
             </div>
         </section>
         <!--end of contact-->
+
+        <!--footer-->
+        <footer class="bg-dark px-5">
+            <div class="container-fluid">
+                <div class="row text-light py-4">
+                    <div class="col-lg-4 col-sm-6">
+                        <h5 class="pb-3">About Us</h5>
+                        <p class="small">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Cumque impedit qui sed vero vitae? Enim ipsa ipsum omnis quia quibusdam?
+                        </p>
+                    </div>
+                    <div class="col-lg-2 col-sm-6">
+                        <h5 class="pb-3">Visit Us</h5>
+                        <ul class="list-unstyled">
+                            <li><a href="#" class="footer-link">Home</a></li>
+                            <li><a href="#" class="footer-link">Mission</a></li>
+                            <li><a href="#" class="footer-link">Collection</a></li>
+                            <li><a href="#" class="footer-link">Gallery</a></li>
+                            <li><a href="#" class="footer-link">Customers</a></li>
+                            <li><a href="#" class="footer-link">Pricing</a></li>
+                            <li><a href="#" class="footer-link">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-2 col-sm-6">
+                        <h5 class="pb-3">Visit Us</h5>
+                        <ul class="list-unstyled">
+                            <li><a href="#" class="footer-link text-uppercase">Customer Service</a></li>
+                            <li><a href="#" class="footer-link text-uppercase">Online Chat</a></li>
+                            <li><a href="#" class="footer-link text-uppercase">Support</a></li>
+                            <li><a href="#" class="text-info">hello@techbola.com.ng</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <h5 class="pb-3">Stay Connected</h5>
+                        <p class="small">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Dolorem ex illum iste laudantium neque nisi nostrum numquam sunt,
+                            vel voluptatum?
+                        </p>
+                        <form class="mb-2">
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Email Address">
+                                <div class="input-group-append">
+                                    <button type="button" class="btn btn-danger text-white text-uppercase font-weight-bold">Sign up</button>
+                                </div>
+                            </div>
+                        </form>
+                        <ul class="list-inline">
+                            <li class="list-inline-item">
+                                <i class="fab fa-facebook-square fa-2x text-primary p-1" style="cursor: pointer;"></i>
+                                <i class="fab fa-google-plus fa-2x text-danger p-1" style="cursor: pointer;"></i>
+                                <i class="fab fa-instagram fa-2x text-danger p-1" style="cursor: pointer;"></i>
+                                <i class="fab fa-twitter fa-2x text-info p-1" style="cursor: pointer;"></i>
+                                <i class="fab fa-youtube fa-2x text-danger p-1" style="cursor: pointer;"></i>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col text-center text-white border-top pt-3">
+                        <p>&copy; 2019 Copyright, All RightsReserved</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!--end of footer-->
 
 
         <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
